Fix header bar's z-index

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -7,7 +7,7 @@
 	padding: 0;
 	background: var(--color-primary);
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-	z-index: 50;
+	z-index: 801; /* the credits of mapbox have a z-index of 800 and I don't want to risk changing it */
 }
 
 .header .wrapper {
